WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32221
op_loop_if_less JIT codegen is broken for 64-bit
https://bugs.webkit.org/show_bug.cgi?id=32221
Summary
op_loop_if_less JIT codegen is broken for 64-bit
Maciej Stachowiak
Reported
2009-12-07 06:46:27 PST
op_loop_if_less JIT codegen is broken for 64-bit. The sense of the test is backwards.
Attachments
Patch
(1.85 KB, patch)
2009-12-07 06:47 PST
,
Maciej Stachowiak
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2009-12-07 06:47:38 PST
Created
attachment 44412
[details]
Patch
Maciej Stachowiak
Comment 2
2009-12-07 07:15:12 PST
Committed
r51765
: <
http://trac.webkit.org/changeset/51765
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug