2009-12-07  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Oliver Hunt.

        op_loop_if_less JIT codegen is broken for 64-bit
        https://bugs.webkit.org/show_bug.cgi?id=32221

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_loop_if_false): Fix codegen in this version - test was backwards.


Canonical link: https://commits.webkit.org/43192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51765 268f45cc-cd09-0410-ab3c-d52691b4dbfc